--- a/tests/cassettes/test_scanform_all.yaml
+++ b/tests/cassettes/test_scanform_all.yaml
@@ -16,71 +16,49 @@ interactions:
     uri: https://api.easypost.com/v2/scan_forms?page_size=5
   response:
     body:
-      string: '{"scan_forms": [{"id": "sf_3c8406684c9941ea814522522c965d4e", "object":
-        "ScanForm", "created_at": "2022-07-28T20:27:04Z", "updated_at": "2022-07-28T20:27:04Z",
-        "tracking_codes": ["9400100109361130493930"], "address": {"id": "adr_a3c583d30eb311ed82eeac1f6bc72124",
-        "object": "Address", "created_at": "2022-07-28T20:27:02+00:00", "updated_at":
-        "2022-07-28T20:27:02+00:00", "name": "Jack Sparrow", "company": "EasyPost",
-        "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
-        "state": "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email":
-        null, "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
-        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20220728/1bae7b8a20284b50acf19e3b63326009.pdf",
-        "form_file_type": null, "batch_id": "batch_130ddf76701a48a999bd16524daf0200",
-        "confirmation": null}, {"id": "sf_cb7af190adb5462da22fb9e0f450cb07", "object":
-        "ScanForm", "created_at": "2022-07-28T20:27:06Z", "updated_at": "2022-07-28T20:27:06Z",
-        "tracking_codes": ["9400100109361130493954"], "address": {"id": "adr_a4f806ec0eb311ed8cbeac1f6bc7bdc6",
-        "object": "Address", "created_at": "2022-07-28T20:27:04+00:00", "updated_at":
-        "2022-07-28T20:27:04+00:00", "name": "Jack Sparrow", "company": "EasyPost",
-        "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
-        "state": "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email":
-        null, "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
-        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20220728/41de0bd4ab274f80b609c92c6a9c9139.pdf",
-        "form_file_type": null, "batch_id": "batch_6de150477f1749c39ec9e9f210e4885f",
-        "confirmation": null}, {"id": "sf_f68130fadb384b9c9aee1b580e35cc6c", "object":
-        "ScanForm", "created_at": "2022-08-15T18:51:28Z", "updated_at": "2022-08-15T18:51:28Z",
-        "tracking_codes": ["9400100109361133189175"], "address": {"id": "adr_421386121ccb11ed9b57ac1f6bc7bdc6",
-        "object": "Address", "created_at": "2022-08-15T18:51:23+00:00", "updated_at":
-        "2022-08-15T18:51:23+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+      string: '{"scan_forms": [{"id": "sf_e797f779358a41eeacdf12f050f4f736", "object":
+        "ScanForm", "created_at": "2023-05-12T19:37:53Z", "updated_at": "2023-05-12T19:37:54Z",
+        "tracking_codes": ["9400100104262209121370"], "address": {"id": "adr_76d1aec4f0fc11edb6f73cecef1b359e",
+        "object": "Address", "created_at": "2023-05-12T19:37:43+00:00", "updated_at":
+        "2023-05-12T19:37:43+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
-        "zip": "90277", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
-        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20220815/1d79b1dfe8b54ad9baa25e2fab9c8a50.pdf",
-        "form_file_type": null, "batch_id": "batch_94e77208f7214d6ab273520bfef08eef",
-        "confirmation": null}, {"id": "sf_794ca4fa4fdf4831bed5bce96ecc3677", "object":
-        "ScanForm", "created_at": "2022-08-15T18:52:19Z", "updated_at": "2022-08-15T18:52:19Z",
-        "tracking_codes": ["9400100109361133189526"], "address": {"id": "adr_630728981ccb11ed8989ac1f6bc7b362",
-        "object": "Address", "created_at": "2022-08-15T18:52:18+00:00", "updated_at":
-        "2022-08-15T18:52:18+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230512/96fdbb0435bf46028353bb4bc0e6589e.pdf",
+        "form_file_type": null, "batch_id": "batch_93bbd242fffd456899d0874728667ca6",
+        "confirmation": null}, {"id": "sf_4bc2f73b448747db89c9023c0dcfc53a", "object":
+        "ScanForm", "created_at": "2023-05-16T15:35:33Z", "updated_at": "2023-05-16T15:35:33Z",
+        "tracking_codes": ["9400100104262210322148"], "address": {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124",
+        "object": "Address", "created_at": "2023-05-16T15:35:31+00:00", "updated_at":
+        "2023-05-16T15:35:31+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
-        "zip": "90277", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
-        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20220815/65bee2ee34c549cc8be07422fa7d9fa2.pdf",
-        "form_file_type": null, "batch_id": "batch_eb362504974048148eb6e7b4556fbbf6",
-        "confirmation": null}, {"id": "sf_23625492fe674a5bb1f2665526b444ee", "object":
-        "ScanForm", "created_at": "2022-08-15T18:52:21Z", "updated_at": "2022-08-15T18:52:21Z",
-        "tracking_codes": ["9400100109361133189540"], "address": {"id": "adr_63f287e01ccb11ed89fcac1f6bc7b362",
-        "object": "Address", "created_at": "2022-08-15T18:52:19+00:00", "updated_at":
-        "2022-08-15T18:52:19+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230516/5b62bfdffb694512ac744379dac2b304.pdf",
+        "form_file_type": null, "batch_id": "batch_1556ea8d81c94d07911dd0eab99ec9fe",
+        "confirmation": null}, {"id": "sf_3e24eda871db4cbf9af092c5399f5adc", "object":
+        "ScanForm", "created_at": "2023-05-16T15:35:34Z", "updated_at": "2023-05-16T15:35:35Z",
+        "tracking_codes": ["9400100104262210322155"], "address": {"id": "adr_4c10c15ef3ff11edbb43ac1f6bc7bdc6",
+        "object": "Address", "created_at": "2023-05-16T15:35:33+00:00", "updated_at":
+        "2023-05-16T15:35:33+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
-        "zip": "90277", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
-        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20220815/b5386c819ee4473887533e07a808eb32.pdf",
-        "form_file_type": null, "batch_id": "batch_6ddd21d292214630bad61509aae99a88",
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230516/2244428c081045f9b846b5a3cc89b2fd.pdf",
+        "form_file_type": null, "batch_id": "batch_0897e22d382a43c4910829b48a77ed84",
         "confirmation": null}], "has_more": false}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '4541'
+      - '2745'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"57ac3ddd99a63dcb86924d2c3bc86d7a"
+      - W/"eea309b1d9ffb70f9747250c82dfbfbe"
       expires:
       - '0'
       pragma:
@@ -98,20 +76,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47b62fa95e5e79a7a8600262fe9
+      - de846e036463a2c7e786b3dc002511da
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb11nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.133603'
+      - '0.118964'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
