--- a/tests/cassettes/test_scanform_create.yaml
+++ b/tests/cassettes/test_scanform_create.yaml
@@ -27,110 +27,110 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-08-15T18:52:18Z", "is_return": false, "messages":
+      string: '{"created_at": "2023-05-16T15:35:31Z", "is_return": false, "messages":
         [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
         "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        "9400100109361133189526", "updated_at": "2022-08-15T18:52:19Z", "batch_id":
+        "9400100104262210322148", "updated_at": "2023-05-16T15:35:32Z", "batch_id":
         null, "batch_status": null, "batch_message": null, "customs_info": null, "from_address":
-        {"id": "adr_630728981ccb11ed8989ac1f6bc7b362", "object": "Address", "created_at":
-        "2022-08-15T18:52:18+00:00", "updated_at": "2022-08-15T18:52:18+00:00", "name":
+        {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124", "object": "Address", "created_at":
+        "2023-05-16T15:35:31+00:00", "updated_at": "2023-05-16T15:35:31+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "5555555555", "email": "test@example.com", "mode": "test", "carrier_facility":
+        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_bc571c7aec5748de8a56fed49473e828",
-        "object": "Parcel", "created_at": "2022-08-15T18:52:18Z", "updated_at": "2022-08-15T18:52:18Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_97a9b127466144618d467aa475905b33",
+        "object": "Parcel", "created_at": "2023-05-16T15:35:31Z", "updated_at": "2023-05-16T15:35:31Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_85cd48bc48c9429abb2417b65229facb",
-        "created_at": "2022-08-15T18:52:18Z", "updated_at": "2022-08-15T18:52:19Z",
-        "date_advance": 0, "integrated_form": "none", "label_date": "2022-08-15T18:52:18Z",
+        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_99b94a85b2234933a2e3f2d90752e96a",
+        "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
+        "date_advance": 0, "integrated_form": "none", "label_date": "2023-05-16T15:35:32Z",
         "label_resolution": 300, "label_size": "4x6", "label_type": "default", "label_file_type":
-        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20220815/0ad6651310014e6194df0b5fd8437599.png",
+        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20230516/ceff03b2653c4b36850eb2081fadeb7f.png",
         "label_pdf_url": null, "label_zpl_url": null, "label_epl2_url": null, "label_file":
-        null}, "rates": [{"id": "rate_d129c188da78431691d55eb2bd71082a", "object":
-        "Rate", "created_at": "2022-08-15T18:52:18Z", "updated_at": "2022-08-15T18:52:18Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.90",
-        "currency": "USD", "retail_rate": "9.45", "retail_currency": "USD", "list_rate":
-        "7.90", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_35cfccf7c2cf43e8be41e4c6bf4246aa", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_070ca168234e456097cc18d24693aed4",
-        "object": "Rate", "created_at": "2022-08-15T18:52:18Z", "updated_at": "2022-08-15T18:52:18Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "29.50",
-        "currency": "USD", "retail_rate": "33.55", "retail_currency": "USD", "list_rate":
-        "29.50", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        null}, "rates": [{"id": "rate_264cf6b604004861aec1bdfe9c752977", "object":
+        "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
+        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
+        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_35cfccf7c2cf43e8be41e4c6bf4246aa", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_b96e6b3c3ec54c40ab25b079220284f4",
-        "object": "Rate", "created_at": "2022-08-15T18:52:18Z", "updated_at": "2022-08-15T18:52:18Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.75",
+        null, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_ab93efcacbc7424e8c19a4612902c982",
+        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
         "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
         "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_35cfccf7c2cf43e8be41e4c6bf4246aa", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_ec30bce15b5142249aa4a660401beb25",
-        "object": "Rate", "created_at": "2022-08-15T18:52:18Z", "updated_at": "2022-08-15T18:52:18Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.57", "currency":
-        "USD", "retail_rate": "5.57", "retail_currency": "USD", "list_rate": "5.57",
+        5, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_142b77c6d9e9485e865fecb816825970",
+        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
+        "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_159ad3a23fa641dbb2f33bb9bfbbafdc",
+        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
+        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_35cfccf7c2cf43e8be41e4c6bf4246aa", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
-        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_ec30bce15b5142249aa4a660401beb25",
-        "object": "Rate", "created_at": "2022-08-15T18:52:18Z", "updated_at": "2022-08-15T18:52:18Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.57", "currency":
-        "USD", "retail_rate": "5.57", "retail_currency": "USD", "list_rate": "5.57",
+        "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_159ad3a23fa641dbb2f33bb9bfbbafdc",
+        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
+        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_35cfccf7c2cf43e8be41e4c6bf4246aa", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        "tracker": {"id": "trk_c2dae01bbba1475c9b23986b8ab2c307", "object": "Tracker",
-        "mode": "test", "tracking_code": "9400100109361133189526", "status": "unknown",
-        "status_detail": "unknown", "created_at": "2022-08-15T18:52:19Z", "updated_at":
-        "2022-08-15T18:52:19Z", "signed_by": null, "weight": null, "est_delivery_date":
-        null, "shipment_id": "shp_35cfccf7c2cf43e8be41e4c6bf4246aa", "carrier": "USPS",
+        "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        "tracker": {"id": "trk_73bffbfc8c0a4eefab463dd925395cfe", "object": "Tracker",
+        "mode": "test", "tracking_code": "9400100104262210322148", "status": "unknown",
+        "status_detail": "unknown", "created_at": "2023-05-16T15:35:32Z", "updated_at":
+        "2023-05-16T15:35:32Z", "signed_by": null, "weight": null, "est_delivery_date":
+        null, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier": "USPS",
         "tracking_details": [], "fees": [], "carrier_detail": null, "public_url":
-        "https://track.easypost.com/djE6dHJrX2MyZGFlMDFiYmJhMTQ3NWM5YjIzOTg2YjhhYjJjMzA3"},
-        "to_address": {"id": "adr_63056a5f1ccb11ed8620ac1f6b0a0d1e", "object": "Address",
-        "created_at": "2022-08-15T18:52:18+00:00", "updated_at": "2022-08-15T18:52:18+00:00",
+        "https://track.easypost.com/djE6dHJrXzczYmZmYmZjOGMwYTRlZWZhYjQ2M2RkOTI1Mzk1Y2Zl"},
+        "to_address": {"id": "adr_4af3f434f3ff11edb17dac1f6bc72124", "object": "Address",
+        "created_at": "2023-05-16T15:35:31+00:00", "updated_at": "2023-05-16T15:35:32+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
         "street2": null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
-        "country": "US", "phone": "5555555555", "email": "TEST@EXAMPLE.COM", "mode":
-        "test", "carrier_facility": null, "residential": true, "federal_tax_id": null,
-        "state_tax_id": null, "verifications": {"zip4": {"success": true, "errors":
-        [], "details": null}, "delivery": {"success": true, "errors": [], "details":
-        {"latitude": 37.77551, "longitude": -122.39697, "time_zone": "America/Los_Angeles"}}}},
-        "usps_zone": 4, "return_address": {"id": "adr_630728981ccb11ed8989ac1f6bc7b362",
-        "object": "Address", "created_at": "2022-08-15T18:52:18+00:00", "updated_at":
-        "2022-08-15T18:52:18+00:00", "name": "Elizabeth Swan", "company": null, "street1":
-        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
-        "zip": "90277", "country": "US", "phone": "5555555555", "email": "test@example.com",
-        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_63056a5f1ccb11ed8620ac1f6b0a0d1e", "object": "Address", "created_at":
-        "2022-08-15T18:52:18+00:00", "updated_at": "2022-08-15T18:52:18+00:00", "name":
-        "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
-        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
-        "US", "phone": "5555555555", "email": "TEST@EXAMPLE.COM", "mode": "test",
+        "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
         "carrier_facility": null, "residential": true, "federal_tax_id": null, "state_tax_id":
         null, "verifications": {"zip4": {"success": true, "errors": [], "details":
         null}, "delivery": {"success": true, "errors": [], "details": {"latitude":
         37.77551, "longitude": -122.39697, "time_zone": "America/Los_Angeles"}}}},
-        "forms": [], "fees": [{"object": "Fee", "type": "LabelFee", "amount": "0.00000",
-        "charged": true, "refunded": false}, {"object": "Fee", "type": "PostageFee",
-        "amount": "5.57000", "charged": true, "refunded": false}], "id": "shp_35cfccf7c2cf43e8be41e4c6bf4246aa",
-        "object": "Shipment"}'
+        "usps_zone": 4, "return_address": {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124",
+        "object": "Address", "created_at": "2023-05-16T15:35:31+00:00", "updated_at":
+        "2023-05-16T15:35:31+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
+        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
+        "adr_4af3f434f3ff11edb17dac1f6bc72124", "object": "Address", "created_at":
+        "2023-05-16T15:35:31+00:00", "updated_at": "2023-05-16T15:35:32+00:00", "name":
+        "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
+        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
+        true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
+        "time_zone": "America/Los_Angeles"}}}}, "forms": [], "fees": [{"object": "Fee",
+        "type": "LabelFee", "amount": "0.00000", "charged": true, "refunded": false},
+        {"object": "Fee", "type": "PostageFee", "amount": "6.07000", "charged": true,
+        "refunded": false}], "id": "shp_ecb4968651e7484eabaed3825d1100ed", "object":
+        "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '6984'
+      - '6985'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"16e4a6be16d2f75614b8d7408bb72b22"
+      - W/"780f5f44d89d99eb296ade65940a69d6"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_35cfccf7c2cf43e8be41e4c6bf4246aa
+      - /api/v2/shipments/shp_ecb4968651e7484eabaed3825d1100ed
       pragma:
       - no-cache
       referrer-policy:
@@ -146,27 +146,27 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47b62fa95e2e79a7a6900262eac
+      - de846e046463a2c3e786b3da00251097
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb12nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.884805'
+      - '1.196224'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 201
       message: Created
 - request:
-    body: '{"shipment": [{"id": "shp_35cfccf7c2cf43e8be41e4c6bf4246aa"}]}'
+    body: '{"scan_form": {"shipment": [{"id": "shp_ecb4968651e7484eabaed3825d1100ed"}]}}'
     headers:
       Accept:
       - '*/*'
@@ -175,7 +175,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '62'
+      - '77'
       Content-Type:
       - application/json
       authorization:
@@ -186,17 +186,17 @@ interactions:
     uri: https://api.easypost.com/v2/scan_forms
   response:
     body:
-      string: '{"id": "sf_794ca4fa4fdf4831bed5bce96ecc3677", "object": "ScanForm",
-        "created_at": "2022-08-15T18:52:19Z", "updated_at": "2022-08-15T18:52:19Z",
-        "tracking_codes": ["9400100109361133189526"], "address": {"id": "adr_630728981ccb11ed8989ac1f6bc7b362",
-        "object": "Address", "created_at": "2022-08-15T18:52:18+00:00", "updated_at":
-        "2022-08-15T18:52:18+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+      string: '{"id": "sf_4bc2f73b448747db89c9023c0dcfc53a", "object": "ScanForm",
+        "created_at": "2023-05-16T15:35:33Z", "updated_at": "2023-05-16T15:35:33Z",
+        "tracking_codes": ["9400100104262210322148"], "address": {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124",
+        "object": "Address", "created_at": "2023-05-16T15:35:31+00:00", "updated_at":
+        "2023-05-16T15:35:31+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
-        "zip": "90277", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
-        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20220815/65bee2ee34c549cc8be07422fa7d9fa2.pdf",
-        "form_file_type": null, "batch_id": "batch_eb362504974048148eb6e7b4556fbbf6",
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230516/5b62bfdffb694512ac744379dac2b304.pdf",
+        "form_file_type": null, "batch_id": "batch_1556ea8d81c94d07911dd0eab99ec9fe",
         "confirmation": null}'
     headers:
       cache-control:
@@ -206,7 +206,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"a85fbd4a8c32a867db17ea6d27615b17"
+      - W/"5ee033e6280694807472ab060a3d0f0a"
       expires:
       - '0'
       pragma:
@@ -224,20 +224,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47b62fa95e3e79a7a6900262f05
+      - de846e046463a2c5e786b3da00251108
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb2nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.281790'
+      - '0.314620'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
