--- a/tests/cassettes/test_scanform_get_next_page.yaml
+++ b/tests/cassettes/test_scanform_get_next_page.yaml
@@ -16,16 +16,49 @@ interactions:
     uri: https://api.easypost.com/v2/scan_forms?page_size=5
   response:
     body:
-      string: '{"scan_forms": [], "has_more": false}'
+      string: '{"scan_forms": [{"id": "sf_e797f779358a41eeacdf12f050f4f736", "object":
+        "ScanForm", "created_at": "2023-05-12T19:37:53Z", "updated_at": "2023-05-12T19:37:54Z",
+        "tracking_codes": ["9400100104262209121370"], "address": {"id": "adr_76d1aec4f0fc11edb6f73cecef1b359e",
+        "object": "Address", "created_at": "2023-05-12T19:37:43+00:00", "updated_at":
+        "2023-05-12T19:37:43+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
+        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230512/96fdbb0435bf46028353bb4bc0e6589e.pdf",
+        "form_file_type": null, "batch_id": "batch_93bbd242fffd456899d0874728667ca6",
+        "confirmation": null}, {"id": "sf_4bc2f73b448747db89c9023c0dcfc53a", "object":
+        "ScanForm", "created_at": "2023-05-16T15:35:33Z", "updated_at": "2023-05-16T15:35:33Z",
+        "tracking_codes": ["9400100104262210322148"], "address": {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124",
+        "object": "Address", "created_at": "2023-05-16T15:35:31+00:00", "updated_at":
+        "2023-05-16T15:35:31+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
+        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230516/5b62bfdffb694512ac744379dac2b304.pdf",
+        "form_file_type": null, "batch_id": "batch_1556ea8d81c94d07911dd0eab99ec9fe",
+        "confirmation": null}, {"id": "sf_3e24eda871db4cbf9af092c5399f5adc", "object":
+        "ScanForm", "created_at": "2023-05-16T15:35:34Z", "updated_at": "2023-05-16T15:35:35Z",
+        "tracking_codes": ["9400100104262210322155"], "address": {"id": "adr_4c10c15ef3ff11edbb43ac1f6bc7bdc6",
+        "object": "Address", "created_at": "2023-05-16T15:35:33+00:00", "updated_at":
+        "2023-05-16T15:35:33+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
+        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230516/2244428c081045f9b846b5a3cc89b2fd.pdf",
+        "form_file_type": null, "batch_id": "batch_0897e22d382a43c4910829b48a77ed84",
+        "confirmation": null}], "has_more": false}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '34'
+      - '2745'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"e5b421a2eb037ffc0fc3c953e8894b9d"
+      - W/"eea309b1d9ffb70f9747250c82dfbfbe"
       expires:
       - '0'
       pragma:
@@ -43,20 +76,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 70d4b6396424b9cce78b244900128f5a
+      - de846e016463a2c7e786b3dd002511ff
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq a29e4ad05c
-      - extlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.058452'
+      - '0.042839'
       x-version-label:
-      - easypost-202303292153-e778646023-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
